# othello-ratkaisija

./: .coveragerc  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py  othello.py  othello_ai.py  pelilauta.py  pelilauta_stub.py  ui.py
src/tests/: othello_ai_test.py  othello_test.py
