[tool.poetry]
name = "othello-ratkaisija"
version = "0.1.0"
description = ""
authors = ["Anne Havunen <anne.havunen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "othello_ratkaisija"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
