[tool.poetry]
name = "othello-ratkaisija"
version = "0.1.0"
description = ""
authors = ["Anne Havunen <anne.havunen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "othello_ratkaisija"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
